<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 tools:context="com.akaldobaie.udacity.abnd.algebra101quiz.MainActivity">
	
	<LinearLayout
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:focusable="true"
		 android:focusableInTouchMode="true"
		 android:orientation="vertical">
		
		<TextView
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:padding="16dp"
			 android:text="@string/welcome"
			 android:textSize="24sp"/>
		
		<!--      QUESTION 1      -->
		<RadioGroup
			 android:id="@+id/radio_question_1"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content">
			
			<TextView
				 style="@style/Question"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/radio_question_1"/>
			
			<RadioButton
				 style="@style/Answer"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/radio_question_1_choice_1"/>
			
			<RadioButton
				 style="@style/Answer"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/radio_question_1_choice_2"/>
			
			<RadioButton
				 android:id="@+id/radio_question_1_correct"
				 style="@style/Answer"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/radio_question_1_choice_3"/> <!-- Correct -->
			
			<RadioButton
				 style="@style/Answer"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/radio_question_1_choice_4"/>
		
		</RadioGroup>
		
		<!--      QUESTION 2      -->
		<TextView
			 style="@style/Question"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:text="@string/edit_text_question_2"/>
		
		<EditText
			 android:id="@+id/edit_text_question_2_answer"
			 style="@style/Answer"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 android:hint="@string/edit_text_question_2_hint"
			 android:inputType="number"
			 android:text=""
			 />  <!-- Correct answer 45 -->
		
		<!--      QUESTION 3      -->
		<TextView
			 style="@style/Question"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:text="@string/check_box_question_3"/>
		
		<CheckBox
			 android:id="@+id/check_box_question_3_box_1"
			 style="@style/Answer"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 android:text="@string/check_box_question_3_option_1"/>
		
		<CheckBox
			 android:id="@+id/check_box_question_3_box_2"
			 style="@style/Answer"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 android:text="@string/check_box_question_3_option_2"/> <!-- Correct -->
		
		<CheckBox
			 android:id="@+id/check_box_question_3_box_3"
			 style="@style/Answer"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 android:text="@string/check_box_question_3_option_3"/> <!-- Correct -->
		
		<CheckBox
			 android:id="@+id/check_box_question_3_box_4"
			 style="@style/Answer"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 android:text="@string/check_box_question_3_option_4"/>
		
		<!--      QUESTION 4      -->
		<RadioGroup
			 android:id="@+id/radio_question_4"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content">
			
			<TextView
				 style="@style/Question"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/radio_question_4"/>
			
			<RadioButton
				 style="@style/Answer"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/radio_question_4_choice_1"/>
			
			<RadioButton
				 android:id="@+id/radio_question_4_correct"
				 style="@style/Answer"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/radio_question_4_choice_2"/><!-- Correct -->
			
			<RadioButton
				 style="@style/Answer"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/radio_question_4_choice_3"/>
			
			<RadioButton
				 style="@style/Answer"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/radio_question_4_choice_4"/>
		
		</RadioGroup>
		
		<!--      BUTTONS BAR      -->
		<LinearLayout
			 style="?android:attr/buttonBarStyle"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 android:orientation="horizontal">
			
			<Button
				 style="?android:attr/buttonBarButtonStyle"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:layout_weight="1"
				 android:onClick="submitQuiz"
				 android:text="@string/submit"/>
			
			<Button
				 style="?android:attr/buttonBarButtonStyle"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:layout_weight="1"
				 android:onClick="showQuizAnswers"
				 android:text="@string/view_answers"/>
			
			<Button
				 style="?android:attr/buttonBarButtonStyle"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:layout_weight="1"
				 android:onClick="resetQuiz"
				 android:text="@string/reset"/>
		
		</LinearLayout>
	
	</LinearLayout>

</ScrollView>